
IMPROVEMENTS

PIG-3552: UriUtil used by reducer estimator should support viewfs (amatsukawa via aniket486)

PIG-3549: Print hadoop jobids for failed, killed job (aniket486)

PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)

PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via aniket486)

BUG FIXES

PIG-3347: Store invocation brings side effect (daijy)

PIG-3670: Fix assert in Pig script (daijy)

PIG-3741: Utils.setTmpFileCompressionOnConf can cause side effect for SequenceFileInterStorage (aniket486)

PIG-3641: Split "otherwise" producing incorrect output when combined with ColumnPruning (knoguchi)

PIG-3677: ConfigurationUtil.getLocalFSProperties can return an inconsistent property set (rohini)

PIG-3621: Python Avro library can't read Avros made with builtin AvroStorage (rusell.jurney via cheolsoo)

PIG-3592: Should not try to create success file for non-fs schemes like hbase (rohini)

PIG-3572: Fix all unit test for during build pig with Hadoop 2.X on Windows (ssvinarchukhorton via daijy)

PIG-2629: Wrong Usage of Scalar which is null causes high namenode operation (rohini)

PIG-3593: Import jython standard module fail on cluster (daijy)

PIG-3576: NPE due to PIG-3549 when job never gets submitted (lbendig via cheolsoo)

PIG-3567: LogicalPlanPrinter throws OOM for large scripts (aniket486)

PIG-3579: pig.script's deserialized version does not maintain line numbers (jgzhang via aniket486)

PIG-3570: Rollback PIG-3060 (daijy)

PIG-3530: Some e2e tests is broken due to PIG-3480 (daijy)

PIG-3492: ColumnPrune dropping used column due to LogicalRelationalOperator.fixDuplicateUids changes not propagating (knoguchi via daijy)

PIG-3325: Adding a tuple to a bag is slow (dvryaboy via aniket486)

PIG-3512: Reducer estimater is broken by PIG-3497 (daijy)

PIG-3510: New filter extractor fails with more than one filter statement (aniket486 via cheolsoo)

Release 0.12.0

INCOMPATIBLE CHANGES
